# python-sdk

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
scripts/: codegen.py  codegen.sh  symlink.sh
tests/: test_api.py
whitehead_sdk/: __init__.py  config.py  token_cache.py  utils.py  wrappers.py  wrappers.pyi
whitehead_sdk/api/: answer.graphql  answer.py  answer_multiple_choice.graphql  answer_multiple_choice.py  answer_question.graphql  answer_question.py  chitchat.graphql  chitchat.py  choose.graphql  choose.py  classify_topic.graphql  classify_topic.py  commonsense_reasoning.graphql  commonsense_reasoning.py  dialogact.graphql  dialogact.py  get_conceptnet_relations.graphql  get_conceptnet_relations.py  get_sentiment.graphql  get_sentiment.py  match_intent.graphql  match_intent.py  measure_similarity.graphql  measure_similarity.py  paraphrase.graphql  paraphrase.py  paraphrase_sentence.graphql  paraphrase_sentence.py  parse_ace.py  parse_context.py  parse_text.graphql  parse_text.py  parse_text_tokens.graphql  parse_text_tokens.py  predict_next_turn.graphql  predict_next_turn.py  relations.graphql  relations.py  render_css.graphql  render_css.py  (+20 more)
whitehead_sdk/api/enum/: a_c_e_output_type.py  agent.py  category.py  relation.py
whitehead_sdk/api/input/: turn.py
whitehead_sdk/schema/: schema.graphql
whitehead_sdk/schema_config/: json_scalar.py
