[tool.poetry]
name = "whitehead_sdk"
version = "0.2.0-alpha.2"
description = "Whitehead SDK"
authors = ["Dmitry Paramonov <asmatic075@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.scripts]
codegen = "scripts.codegen:main"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
requests = "^2.25.1"
cryptography = "^3.4.6"
gql = {version = "3.0.0a5", extras = ["all"], allow-prereleases = true}
py-gql-client = "^1.0.1"
dataclasses = {version = "^0.6", python = "~3.6"}
portalocker = "^2.3.0"
pywin32 = {version = "==228", markers="sys_platform == 'win32'"}



[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
